// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot (default capability: the gate) 1`] = `
{
  "lines": 667,
  "sha256": "5f95ff62518cc1e68dadaadbab424de6254d8fb6e1b470fb08904ddb75aeaa08",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot new_project (project-free: the shell) 1`] = `
{
  "lines": 667,
  "sha256": "d9e497df98bb8157e6a6a759b6e4962eb33deaf5885b1c03c1634e16f762a519",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot rfi (the shell + the job-picker sheet) 1`] = `
{
  "lines": 667,
  "sha256": "c884c9695a86d928a2eb51c152db3311a033cf86b921e494a22bf15f749b5d22",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events (log, event, evidence, notice-period, notice-form sheets) 1`] = `
{
  "lines": 702,
  "sha256": "611d55cef3856f4b2b2e922d15ac91ea7b21fd8c9efb1199173bb9e92a0d3795",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events: a logged delay, its event sheet and the notice form 1`] = `
{
  "lines": 818,
  "sha256": "158eeb4750348571c691bbd171179c47f8c32461f7b2044c8c50b4c8bcfd2e35",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) project-detail (the hub with the cost and revision sheets) 1`] = `
{
  "lines": 1611,
  "sha256": "dd511871e974da19f973e767365333de813778b6e11aad6641ab23f79c10cd2f",
}
`;
